[gd_scene load_steps=13 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel/StagePanel_StageHeader.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel/RoundInfoPanel_Background.png" type="Texture" id=3]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel/HealthPanel_HealthIcon.png" type="Texture" id=4]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel/StagePanel_StageNumberBackground.png" type="Texture" id=5]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel/HealthPanel_Background.png" type="Texture" id=6]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel/RoundInfoPanel.gd" type="Script" id=7]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel/RoundPanel_RoundHeader.png" type="Texture" id=8]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel/RoundPanel_RoundNumberBackground.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 1 )

[node name="RoundInfoPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 114.0
margin_bottom = 82.0
texture = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 114.0
margin_bottom = 82.0
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 111.0
margin_bottom = 79.0

[node name="HealthPanel" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 4.0
margin_right = 104.0
margin_bottom = 25.0
size_flags_horizontal = 6
custom_constants/margin_top = 5

[node name="HealthPanelBackground" type="TextureRect" parent="MarginContainer/VBoxContainer/HealthPanel"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 25.0
texture = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HealthPanel"]
margin_left = 61.0
margin_top = 9.0
margin_right = 100.0
margin_bottom = 21.0
size_flags_horizontal = 10
size_flags_vertical = 6

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/HealthPanel/HBoxContainer"]
margin_right = 18.0
margin_bottom = 12.0
custom_constants/margin_top = 1

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/HealthPanel/HBoxContainer/MarginContainer2"]
margin_top = 1.0
margin_right = 18.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "150"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HealthPanel/HBoxContainer"]
margin_left = 22.0
margin_right = 39.0
margin_bottom = 12.0
custom_constants/margin_right = 4

[node name="HealthIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HealthPanel/HBoxContainer/MarginContainer"]
margin_right = 13.0
margin_bottom = 12.0
texture = ExtResource( 4 )

[node name="StageRoundPanel" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 4.0
margin_top = 29.0
margin_right = 104.0
margin_bottom = 69.0
size_flags_horizontal = 6
custom_constants/margin_top = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/StageRoundPanel"]
margin_top = 8.0
margin_right = 100.0
margin_bottom = 40.0
custom_constants/separation = 0

[node name="StageNumPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/StageRoundPanel/HBoxContainer"]
margin_right = 50.0
margin_bottom = 32.0
custom_constants/separation = 0

[node name="Header" type="MarginContainer" parent="MarginContainer/VBoxContainer/StageRoundPanel/HBoxContainer/StageNumPanel"]
margin_left = 4.0
margin_right = 45.0
margin_bottom = 12.0
size_flags_horizontal = 6

[node name="HeaderBackground" type="TextureRect" parent="MarginContainer/VBoxContainer/StageRoundPanel/HBoxContainer/StageNumPanel/Header"]
margin_right = 41.0
margin_bottom = 12.0
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/StageRoundPanel/HBoxContainer/StageNumPanel/Header"]
margin_left = 10.0
margin_right = 30.0
margin_bottom = 12.0
size_flags_horizontal = 6
custom_constants/margin_top = 3

[node name="HeaderLabel" type="Label" parent="MarginContainer/VBoxContainer/StageRoundPanel/HBoxContainer/StageNumPanel/Header/MarginContainer"]
margin_top = 3.0
margin_right = 20.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 2 )
text = "Stage"

[node name="Body" type="MarginContainer" parent="MarginContainer/VBoxContainer/StageRoundPanel/HBoxContainer/StageNumPanel"]
margin_top = 12.0
margin_right = 50.0
margin_bottom = 32.0

[node name="BodyBackground" type="TextureRect" parent="MarginContainer/VBoxContainer/StageRoundPanel/HBoxContainer/StageNumPanel/Body"]
margin_right = 50.0
margin_bottom = 20.0
texture = ExtResource( 5 )

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/StageRoundPanel/HBoxContainer/StageNumPanel/Body"]
margin_left = 22.0
margin_right = 28.0
margin_bottom = 20.0
size_flags_horizontal = 6
custom_constants/margin_top = 2

[node name="StageNumLabel" type="Label" parent="MarginContainer/VBoxContainer/StageRoundPanel/HBoxContainer/StageNumPanel/Body/MarginContainer2"]
margin_top = 5.0
margin_right = 6.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="RoundNumPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/StageRoundPanel/HBoxContainer"]
margin_left = 50.0
margin_right = 100.0
margin_bottom = 32.0
custom_constants/separation = 0

[node name="Header" type="MarginContainer" parent="MarginContainer/VBoxContainer/StageRoundPanel/HBoxContainer/RoundNumPanel"]
margin_left = 4.0
margin_right = 45.0
margin_bottom = 12.0
size_flags_horizontal = 6

[node name="HeaderBackground" type="TextureRect" parent="MarginContainer/VBoxContainer/StageRoundPanel/HBoxContainer/RoundNumPanel/Header"]
margin_right = 41.0
margin_bottom = 12.0
texture = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/StageRoundPanel/HBoxContainer/RoundNumPanel/Header"]
margin_left = 10.0
margin_right = 30.0
margin_bottom = 12.0
size_flags_horizontal = 6
custom_constants/margin_top = 3

[node name="HeaderLabel" type="Label" parent="MarginContainer/VBoxContainer/StageRoundPanel/HBoxContainer/RoundNumPanel/Header/MarginContainer"]
margin_top = 3.0
margin_right = 20.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 2 )
text = "Round"

[node name="Body" type="MarginContainer" parent="MarginContainer/VBoxContainer/StageRoundPanel/HBoxContainer/RoundNumPanel"]
margin_top = 12.0
margin_right = 50.0
margin_bottom = 32.0

[node name="BodyBackground" type="TextureRect" parent="MarginContainer/VBoxContainer/StageRoundPanel/HBoxContainer/RoundNumPanel/Body"]
margin_right = 50.0
margin_bottom = 20.0
texture = ExtResource( 9 )

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/StageRoundPanel/HBoxContainer/RoundNumPanel/Body"]
margin_left = 22.0
margin_right = 28.0
margin_bottom = 20.0
size_flags_horizontal = 6
custom_constants/margin_top = 2

[node name="RoundNumLabel" type="Label" parent="MarginContainer/VBoxContainer/StageRoundPanel/HBoxContainer/RoundNumPanel/Body/MarginContainer2"]
margin_top = 5.0
margin_right = 6.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 3 )
text = "0"
